latest things are aded
latest things are aded

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
                   ><img
-                    src="images/weapons/react.png"
+                    src="Experties/reactjs.gif"
                     alt="Image"
                     class="img-fluid"
                 /></span>
@@ -465,7 +465,7 @@
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
                   ><img
-                    src="images/weapons/node-js.png"
+                    src="Experties/nodejs.gif"
                     alt="Image"
                     class="img-fluid"
                 /></span>
@@ -478,7 +478,7 @@
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
                   ><img
-                    src="images/weapons/mongo.png"
+                    src="Experties/mongodb.gif"
                     alt="Image"
                     class="img-fluid"
                 /></span>
@@ -492,7 +492,7 @@
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
                   ><img
-                    src="images/weapons/python.png"
+                    src="Experties/Python.gif"
                     alt="Image"
                     class="img-fluid"
                 /></span>
@@ -504,7 +504,7 @@
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
                   ><img
-                    src="images/weapons/django.png"
+                    src="Experties/Django.gif"
                     alt="Image"
                     class="img-fluid"
                 /></span>
@@ -517,7 +517,7 @@
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
                   ><img
-                    src="images/weapons/bootstarp.png"
+                    src="Experties/bootstarp.gif"
                     alt="Image"
                     class="img-fluid"
                 /></span>
@@ -532,7 +532,7 @@
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
                 ><img
-                  src="images/weapons/html.png"
+                  src="Experties/html.gif"
                   alt="Image"
                   class="img-fluid"
               /></span>
@@ -544,7 +544,7 @@
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
                 ><img
-                  src="images/weapons/css-3.png"
+                  src="Experties/css-3.png"
                   alt="Image"
                   class="img-fluid"
               /></span>
@@ -556,7 +556,7 @@
           <div class="service text-center">
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
-                ><img src="images/weapons/js.png" alt="Image" class="img-fluid"
+                ><img src="Experties/javascript.gif" alt="Image" class="img-fluid"
               /></span>
             </div>
           </div>
@@ -568,7 +568,7 @@
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
                 ><img
-                  src="images/weapons/npm.png"
+                  src="Experties/npm.webp"
                   alt="Image"
                   class="img-fluid"
               /></span>
@@ -580,7 +580,7 @@
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
                 ><img
-                  src="images/weapons/sql-server.png"
+                  src="Experties/sql.gif"
                   alt="Image"
                   class="img-fluid"
               /></span>
@@ -593,7 +593,47 @@
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
                 ><img
-                  src="images/weapons/docker.png"
+                  src="Experties/docker.gif"
+                  alt="Image"
+                  class="img-fluid"
+              /></span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
+          <div class="service text-center">
+            <div class="gsap-reveal-hero mb-3">
+              <span class="icon-service"
+                ><img
+                  src="Experties/vscode.gif"
+                  alt="Image"
+                  class="img-fluid"
+              /></span>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
+          <div class="service text-center">
+            <div class="gsap-reveal-hero mb-3">
+              <span class="icon-service"
+                ><img
+                  src="Experties/git.gif"
+                  alt="Image"
+                  class="img-fluid"
+              /></span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
+          <div class="service text-center">
+            <div class="gsap-reveal-hero mb-3">
+              <span class="icon-service"
+                ><img
+                  src="Experties/canava.gif"
                   alt="Image"
                   class="img-fluid"
               /></span>
@@ -1000,9 +1040,8 @@
 
     <div id="overlayer"></div>
     <div class="loader">
-      <div class="spinner-border" role="status">
-        <span class="sr-only">Loading...</span>
-      </div>
+      <img src="/images/skill.gif" alt="">
+      
     </div>
     <script src="/js/app.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
