--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <div class="service text-center">
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
-                  ><img src="images/web.png" alt="Image" class="img-fluid"
+                  ><img src="images/webdeve.gif" alt="Image" class="img-fluid"
                 /></span>
               </div>
               <h3 class="gsap-reveal-hero">Web Development</h3>
@@ -285,7 +285,7 @@
             <div class="service text-center">
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
-                  ><img src="images/eco.png" alt="Image" class="img-fluid"
+                  ><img src="images/Eccomerce.gif" alt="Image" class="img-fluid"
                 /></span>
               </div>
               <h3 class="gsap-reveal-hero">E commerce</h3>
@@ -300,7 +300,7 @@
             <div class="service text-center">
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
-                  ><img src="images/des.png" alt="Image" class="img-fluid"
+                  ><img src="images/Design.gif" alt="Image" class="img-fluid"
                 /></span>
               </div>
               <h3 class="gsap-reveal-hero">Web Design</h3>
@@ -919,7 +919,8 @@
         <div class="row">
           <div class="col-lg-3">
             <div class="widget">
-              <h3>📌 Shortcut</h3>
+              
+              <h3><img src="/images/Footer/shortcut.gif" style="max-width: 30px;" alt=""> Shortcut</h3>
               <ul class="list-unstyled float-left links">
                 <li><a href="#home-section">Home</a></li>
                 <li><a href="portfolio-section">Recent Works</a></li>
@@ -934,7 +935,7 @@
 
           <div class="col-lg-3">
             <div class="widget">
-              <h3>💱 Projects</h3>
+              <h3><img src="/images/Footer/Projects.gif" style="max-width: 25px;" alt="">  Projects</h3>
               <ul class="list-unstyled float-left links">
                 <li>
                   <a href="https://www.pioneersoftware.com.np/" target="_blank"
@@ -969,7 +970,7 @@
 
           <div class="col-lg-3">
             <div class="widget">
-              <h3>🔧 Services</h3>
+              <h3><img src="/images/Footer/services.gif" style="max-width: 40px;" alt="">  Services</h3>
               <ul class="list-unstyled float-left links">
                 <li><a href="#">Web Development</a></li>
                 <li><a href="#">E-Commerce Development</a></li>
@@ -980,7 +981,7 @@
 
           <div class="col-lg-3">
             <div class="widget">
-              <h3><i class="ri-phone-fill"></i>📞 Contact</h3>
+              <h3><i class="ri-phone-fill"></i><img src="/images/Footer/contactme.gif" style="max-width: 50px;" alt="">  Contact</h3>
               <address>
                 <a
                   href="https://www.google.com/maps/place/Kathmandu+44600/@27.7090302,85.2849329,13z/data=!3m1!4b1!4m6!3m5!1s0x39eb198a307baabf:0xb5137c1bf18db1ea!8m2!3d27.7172453!4d85.3239605!16zL20vMDRjeDU?entry=ttu"
