--- a/index.html
+++ b/index.html
@@ -231,12 +231,17 @@
               sprinkle of laughter along the way!
             </p>
             <br />
+            <img
+              src="images/explore.gif"
+              style="max-width: 60px; margin-left: 45%"
+              alt=""
+            />
             <p class="gsap-reveal-hero text-center">
               <a
-                href="images/Resume.pdf"
+                href="https://www.linkedin.com/in/om-pandey-511818277/"
                 target="_blank"
                 class="btn btn-outline-black"
-                >Download Cv</a
+                >Explore Me</a
               >
             </p>
           </div>
@@ -285,7 +290,10 @@
             <div class="service text-center">
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
-                  ><img src="images/Eccomerce.gif" alt="Image" class="img-fluid"
+                  ><img
+                    src="images/Eccomerce.gif"
+                    alt="Image"
+                    class="img-fluid"
                 /></span>
               </div>
               <h3 class="gsap-reveal-hero">E commerce</h3>
@@ -453,7 +461,7 @@
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
                   ><img
-                    src="Experties/reactjs.gif"
+                    src="Experties/Python.gif"
                     alt="Image"
                     class="img-fluid"
                 /></span>
@@ -465,7 +473,7 @@
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
                   ><img
-                    src="Experties/nodejs.gif"
+                    src="Experties/Django.gif"
                     alt="Image"
                     class="img-fluid"
                 /></span>
@@ -492,7 +500,7 @@
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
                   ><img
-                    src="Experties/Python.gif"
+                    src="Experties/reactjs.gif"
                     alt="Image"
                     class="img-fluid"
                 /></span>
@@ -504,7 +512,7 @@
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
                   ><img
-                    src="Experties/Django.gif"
+                    src="Experties/nodejs.gif"
                     alt="Image"
                     class="img-fluid"
                 /></span>
@@ -531,10 +539,7 @@
           <div class="service text-center">
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
-                ><img
-                  src="Experties/html.gif"
-                  alt="Image"
-                  class="img-fluid"
+                ><img src="Experties/html.gif" alt="Image" class="img-fluid"
               /></span>
             </div>
           </div>
@@ -543,10 +548,7 @@
           <div class="service text-center">
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
-                ><img
-                  src="Experties/css-3.png"
-                  alt="Image"
-                  class="img-fluid"
+                ><img src="Experties/css-3.png" alt="Image" class="img-fluid"
               /></span>
             </div>
           </div>
@@ -556,7 +558,10 @@
           <div class="service text-center">
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
-                ><img src="Experties/javascript.gif" alt="Image" class="img-fluid"
+                ><img
+                  src="Experties/javascript.gif"
+                  alt="Image"
+                  class="img-fluid"
               /></span>
             </div>
           </div>
@@ -567,10 +572,7 @@
           <div class="service text-center">
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
-                ><img
-                  src="Experties/npm.webp"
-                  alt="Image"
-                  class="img-fluid"
+                ><img src="Experties/npm.webp" alt="Image" class="img-fluid"
               /></span>
             </div>
           </div>
@@ -579,10 +581,7 @@
           <div class="service text-center">
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
-                ><img
-                  src="Experties/sql.gif"
-                  alt="Image"
-                  class="img-fluid"
+                ><img src="Experties/sql.gif" alt="Image" class="img-fluid"
               /></span>
             </div>
           </div>
@@ -592,10 +591,7 @@
           <div class="service text-center">
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
-                ><img
-                  src="Experties/docker.gif"
-                  alt="Image"
-                  class="img-fluid"
+                ><img src="Experties/docker.gif" alt="Image" class="img-fluid"
               /></span>
             </div>
           </div>
@@ -607,10 +603,7 @@
           <div class="service text-center">
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
-                ><img
-                  src="Experties/vscode.gif"
-                  alt="Image"
-                  class="img-fluid"
+                ><img src="Experties/vscode.gif" alt="Image" class="img-fluid"
               /></span>
             </div>
           </div>
@@ -619,10 +612,7 @@
           <div class="service text-center">
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
-                ><img
-                  src="Experties/git.gif"
-                  alt="Image"
-                  class="img-fluid"
+                ><img src="Experties/git.gif" alt="Image" class="img-fluid"
               /></span>
             </div>
           </div>
@@ -632,10 +622,7 @@
           <div class="service text-center">
             <div class="gsap-reveal-hero mb-3">
               <span class="icon-service"
-                ><img
-                  src="Experties/canava.gif"
-                  alt="Image"
-                  class="img-fluid"
+                ><img src="Experties/canava.gif" alt="Image" class="img-fluid"
               /></span>
             </div>
           </div>
@@ -753,7 +740,6 @@
                 </blockquote>
               </div>
             </div>
-            <!-- END .item -->
 
             <div class="item">
               <div class="testimonial-v1">
@@ -773,7 +759,6 @@
                 </blockquote>
               </div>
             </div>
-            <!-- END .item -->
 
             <div class="item">
               <div class="testimonial-v1">
@@ -797,7 +782,6 @@
                 </blockquote>
               </div>
             </div>
-            <!-- END .item -->
 
             <div class="item">
               <div class="testimonial-v1">
@@ -822,7 +806,6 @@
                 </blockquote>
               </div>
             </div>
-            <!-- END .item -->
           </div>
         </div>
       </div>
@@ -899,15 +882,11 @@
           </div>
           <div class="col-lg-6">
             <div id="map">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.7805690305704!2d85.27856847465706!3d27.69317612611782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb187a97f390b1%3A0xec3f47092df0d4ca!2sKalanki%2C%20Kathmandu%2044600!5e0!3m2!1sen!2snp!4v1709380250425!5m2!1sen!2snp"
-                width="600"
-                height="450"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
+              <img
+                src="images/hellow.gif"
+                style="margin-left: 200px; width: 400px"
+                alt=""
+              />
             </div>
           </div>
         </div>
@@ -919,23 +898,34 @@
         <div class="row">
           <div class="col-lg-3">
             <div class="widget">
-              
-              <h3><img src="/images/Footer/shortcut.gif" style="max-width: 30px;" alt=""> Shortcut</h3>
+              <h3>
+                <img
+                  src="/images/Footer/shortcut.gif"
+                  style="max-width: 30px"
+                  alt=""
+                />
+                Shortcut
+              </h3>
               <ul class="list-unstyled float-left links">
                 <li><a href="#home-section">Home</a></li>
-                <li><a href="portfolio-section">Recent Works</a></li>
+                <li><a href="#portfolio-section">Recent Works</a></li>
                 <li><a href="#about-section">About Me</a></li>
                 <li><a href="#services-section">What i Do</a></li>
                 <li><a href="#contact-section">Reach Me</a></li>
               </ul>
             </div>
-            <!-- /.widget -->
           </div>
-          <!-- /.col-lg-3 -->
 
           <div class="col-lg-3">
             <div class="widget">
-              <h3><img src="/images/Footer/Projects.gif" style="max-width: 25px;" alt="">  Projects</h3>
+              <h3>
+                <img
+                  src="/images/Footer/Projects.gif"
+                  style="max-width: 25px"
+                  alt=""
+                />
+                Projects
+              </h3>
               <ul class="list-unstyled float-left links">
                 <li>
                   <a href="https://www.pioneersoftware.com.np/" target="_blank"
@@ -970,7 +960,14 @@
 
           <div class="col-lg-3">
             <div class="widget">
-              <h3><img src="/images/Footer/services.gif" style="max-width: 40px;" alt="">  Services</h3>
+              <h3>
+                <img
+                  src="/images/Footer/services.gif"
+                  style="max-width: 40px"
+                  alt=""
+                />
+                Services
+              </h3>
               <ul class="list-unstyled float-left links">
                 <li><a href="#">Web Development</a></li>
                 <li><a href="#">E-Commerce Development</a></li>
@@ -981,7 +978,15 @@
 
           <div class="col-lg-3">
             <div class="widget">
-              <h3><i class="ri-phone-fill"></i><img src="/images/Footer/contactme.gif" style="max-width: 50px;" alt="">  Contact</h3>
+              <h3>
+                <i class="ri-phone-fill"></i
+                ><img
+                  src="/images/Footer/contactme.gif"
+                  style="max-width: 50px"
+                  alt=""
+                />
+                Contact
+              </h3>
               <address>
                 <a
                   href="https://www.google.com/maps/place/Kathmandu+44600/@27.7090302,85.2849329,13z/data=!3m1!4b1!4m6!3m5!1s0x39eb198a307baabf:0xb5137c1bf18db1ea!8m2!3d27.7172453!4d85.3239605!16zL20vMDRjeDU?entry=ttu"
@@ -1038,11 +1043,10 @@
         </div>
       </div>
     </div>
-
+    <div class="custom-cursor"></div>
     <div id="overlayer"></div>
     <div class="loader">
-      <img src="/images/skill.gif" alt="">
-      
+      <img src="/images/skill.gif" alt="" />
     </div>
     <script src="/js/app.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
