--- a/index.html
+++ b/index.html
@@ -1080,5 +1080,7 @@
         if (d.head) d.head.appendChild(s);
       })(document, window, "Chatra");
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1859761208513074"
+    crossorigin="anonymous"></script>
   </body>
 </html>
