--- a/index.html
+++ b/index.html
@@ -403,7 +403,6 @@
             </h2>
             <br />
             <p class="gsap-reveal-hero">Achievements And Certifications</p>
-
             <div class="wave gsap-reveal-hero">
               <svg>
                 <path d="M10,10 L50,100 L90,50" stroke="#0389ff"></path>
@@ -430,7 +429,27 @@
               </p>
             </div>
           </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
+            <div class="service text-center">
+              <div class="gsap-reveal-hero mb-3">
+                <span class="icon-service"
+                  ><img
+                    src="images/character.jpg"
+                    alt="Image"
+                    style="width: 200px;"
+                /></span>
+              </div>
+              <h3 class="gsap-reveal-hero">Django Proficiency Certificate</h3>
+              <p class="gsap-reveal-hero">
+                Received a Performance Certificate in Django, showcasing proficiency in web development utilizing the Django framework after completing an intensive training program.
+              </p>
+            </div>
+          </div>
+
         </div>
+
+        
+
       </div>
     </div>
 
