--- a/index.html
+++ b/index.html
@@ -436,20 +436,88 @@
                   ><img
                     src="images/character.jpg"
                     alt="Image"
-                    style="width: 200px;"
+                    style="width: 200px"
                 /></span>
               </div>
               <h3 class="gsap-reveal-hero">Django Proficiency Certificate</h3>
               <p class="gsap-reveal-hero">
-                Received a Performance Certificate in Django, showcasing proficiency in web development utilizing the Django framework after completing an intensive training program.
+                Received a Performance Certificate in Django, showcasing
+                proficiency in web development utilizing the Django framework
+                after completing an intensive training program.
               </p>
             </div>
           </div>
-
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
+            <div class="service text-center">
+              <div class="gsap-reveal-hero mb-3">
+                <span class="icon-service"
+                  ><img src="images/HTML.jpg" alt="Image" style="width: 200px"
+                /></span>
+              </div>
+              <h3 class="gsap-reveal-hero">FrontEnd Development</h3>
+              <p class="gsap-reveal-hero">
+                Received a Certificate in Frontend Development, showcasing
+                proficiency in web development utilizing the Frontend
+                Development framework after completing an intensive training
+                program.
+              </p>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
+            <div class="service text-center">
+              <div class="gsap-reveal-hero mb-3">
+                <span class="icon-service"
+                  ><img
+                    src="images/Python.jpg"
+                    alt="Image"
+                    style="width: 200px"
+                /></span>
+              </div>
+              <h3 class="gsap-reveal-hero">Python Uses</h3>
+              <p class="gsap-reveal-hero">
+                Received a Certificate in Python Development, showcasing
+                proficiency in utilizing Python for various applications after
+                completing an intensive training program
+              </p>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
+            <div class="service text-center">
+              <div class="gsap-reveal-hero mb-3">
+                <span class="icon-service"
+                  ><img
+                    src="images/Linuxx.jpg"
+                    alt="Image"
+                    style="width: 200px"
+                /></span>
+              </div>
+              <h3 class="gsap-reveal-hero">Linux Operations</h3>
+              <p class="gsap-reveal-hero">
+                Received a Certificate in Linux Operations, showcasing
+                proficiency in utilizing Linux for various tasks and operations
+                after completing an intensive training program.
+              </p>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
+            <div class="service text-center">
+              <div class="gsap-reveal-hero mb-3">
+                <span class="icon-service"
+                  ><img
+                    src="images/Linuxx.jpg"
+                    alt="Image"
+                    style="width: 200px"
+                /></span>
+              </div>
+              <h3 class="gsap-reveal-hero">ChatGPT For Befinners</h3>
+              <p class="gsap-reveal-hero">
+                Received a Certificate in ChatGPT for Beginners, showcasing
+                proficiency in utilizing ChatGPT for various applications after
+                completing an intensive training program
+              </p>
+            </div>
+          </div>
         </div>
-
-        
-
       </div>
     </div>
 
@@ -1099,7 +1167,10 @@
         if (d.head) d.head.appendChild(s);
       })(document, window, "Chatra");
     </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1859761208513074"
-    crossorigin="anonymous"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1859761208513074"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
