eat sleep code repeet
eat sleep code repeet

--- a/index.html
+++ b/index.html
@@ -332,7 +332,8 @@
             </h2>
             <br />
             <p class="gsap-reveal-hero">
-              Here's a snapshot of my educational journey: 📚
+              Here's a snapshot of my educational journey:
+              <a href="/images/Resume.pdf" target="_blank">📚</a>
             </p>
             <div class="wave gsap-reveal-hero">
               <svg>
@@ -743,10 +744,8 @@
             data-aos-delay="0"
           >
             <div class="progressbar" data-animate="false">
-              <div class="circle" data-percent="98">
-                <div class="number"></div>
-                <p class="caption">Front End</p>
-              </div>
+              <img src="Progres/eat.gif" alt="" style="max-width: 200px" />
+              <p class="caption">Eat</p>
             </div>
           </div>
           <div
@@ -755,10 +754,8 @@
             data-aos-delay="100"
           >
             <div class="progressbar" data-animate="false">
-              <div class="circle" data-percent="95">
-                <div class="number"></div>
-                <p class="caption">Backend</p>
-              </div>
+              <img src="Progres/sleep.gif" alt="" style="max-width: 125px" />
+              <p class="caption">Sleep</p>
             </div>
           </div>
           <div
@@ -767,10 +764,8 @@
             data-aos-delay="200"
           >
             <div class="progressbar" data-animate="false">
-              <div class="circle" data-percent="89">
-                <div class="number"></div>
-                <p class="caption">Database</p>
-              </div>
+              <img src="Progres/code.gif" alt="" style="max-width: 200px" />
+              <p class="caption">Code</p>
             </div>
           </div>
           <div
@@ -779,10 +774,8 @@
             data-aos-delay="300"
           >
             <div class="progressbar" data-animate="false">
-              <div class="circle" data-percent="85">
-                <div class="number"></div>
-                <p class="caption">UI/UX</p>
-              </div>
+              <img src="Progres/repeet.gif" alt="" style="max-width: 150px" />
+              <p class="caption">Repeet</p>
             </div>
           </div>
         </div>
