--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               /></a>
             </div>
             <div class="item web branding col-sm-4">
-              <a href="https://movie-app-lac-mu.vercel.app/" target="_blank"
+              <a href="https://nepalicinema.vercel.app/" target="_blank"
                 ><img
                   src="images/movieapp.png"
                   class="lazyload img-fluid"
@@ -1030,7 +1030,7 @@
                   >
                 </li>
                 <li>
-                  <a href="https://movie-app-lac-mu.vercel.app/" target="_blank"
+                  <a href="https://nepalicinema.vercel.app/" target="_blank"
                     >Movie App</a
                   >
                 </li>
@@ -1126,7 +1126,7 @@
     <div class="custom-cursor"></div>
     <div id="overlayer"></div>
     <div class="loader">
-      <img src="/images/skill.gif" alt="" />
+      <img src="/images/loder.gif" alt="" />
     </div>
     <script src="/js/app.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
