--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
     <div class="custom-cursor"></div>
     <div id="overlayer"></div>
     <div class="loader">
-      <img src="/images/loder.gif" alt="" />
+      <img src="/images/skill.gif" alt="" />
     </div>
     <script src="/js/app.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
