--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
               </div>
               <h3 class="gsap-reveal-hero">Django Developer</h3>
               <p class="gsap-reveal-hero">
-                Completed a two-month Django course with certifications in web
+                Completed a two-month <b>Django</b> course with certifications in web
                 development. Ready to tackle new challenges with expertise.
               </p>
             </div>
@@ -442,7 +442,7 @@
               </div>
               <h3 class="gsap-reveal-hero">Django Proficiency Certificate</h3>
               <p class="gsap-reveal-hero">
-                Received a Performance Certificate in Django, showcasing
+                Received a <b>Performance Certificate in Django</b>, showcasing
                 proficiency in web development utilizing the Django framework
                 after completing an intensive training program.
               </p>
@@ -457,7 +457,7 @@
               </div>
               <h3 class="gsap-reveal-hero">FrontEnd Development</h3>
               <p class="gsap-reveal-hero">
-                Received a Certificate in Frontend Development, showcasing
+                Received a Certificate in <b>Frontend Development</b>, showcasing
                 proficiency in web development utilizing the Frontend
                 Development framework after completing an intensive training
                 program.
@@ -476,8 +476,42 @@
               </div>
               <h3 class="gsap-reveal-hero">Python Uses</h3>
               <p class="gsap-reveal-hero">
-                Received a Certificate in Python Development, showcasing
+                Received a Certificate in <b>Python Development</b>, showcasing
                 proficiency in utilizing Python for various applications after
+                completing an intensive training program
+              </p>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
+            <div class="service text-center">
+              <div class="gsap-reveal-hero mb-3">
+                <span class="icon-service"
+                  ><img
+                    src="images/MERN.jpg"
+                    alt="Image"
+                    style="width: 200px"
+                /></span>
+              </div>
+              <h3 class="gsap-reveal-hero">MERN STACK</h3>
+              <p class="gsap-reveal-hero">
+                Completed a two-month <b>MERNSTACK</b> course with certifications in web development. Ready to tackle new challenges with expertise
+              </p>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
+            <div class="service text-center">
+              <div class="gsap-reveal-hero mb-3">
+                <span class="icon-service"
+                  ><img
+                    src="images/Linuxx.jpg"
+                    alt="Image"
+                    style="width: 200px"
+                /></span>
+              </div>
+              <h3 class="gsap-reveal-hero">ChatGPT For Befinners</h3>
+              <p class="gsap-reveal-hero">
+                Received a Certificate in <b>ChatGPT for Beginners</b>, showcasing
+                proficiency in utilizing ChatGPT for various applications after
                 completing an intensive training program
               </p>
             </div>
@@ -494,27 +528,7 @@
               </div>
               <h3 class="gsap-reveal-hero">Linux Operations</h3>
               <p class="gsap-reveal-hero">
-                Received a Certificate in Linux Operations, showcasing
-                proficiency in utilizing Linux for various tasks and operations
-                after completing an intensive training program.
-              </p>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
-            <div class="service text-center">
-              <div class="gsap-reveal-hero mb-3">
-                <span class="icon-service"
-                  ><img
-                    src="images/Linuxx.jpg"
-                    alt="Image"
-                    style="width: 200px"
-                /></span>
-              </div>
-              <h3 class="gsap-reveal-hero">ChatGPT For Befinners</h3>
-              <p class="gsap-reveal-hero">
-                Received a Certificate in ChatGPT for Beginners, showcasing
-                proficiency in utilizing ChatGPT for various applications after
-                completing an intensive training program
+                Received a Certificate in Linux Operations, showcasing proficiency in utilizing <b>Linux</b> for various tasks and operations after completing an intensive training program.
               </p>
             </div>
           </div>
