--- a/index.html
+++ b/index.html
@@ -73,31 +73,7 @@
             ><img src="images/skill.gif" style="max-width: 30px" alt="" />
             OM<span class="text-primary">.</span></a
           >
-          <ul
-            class="js-clone-nav d-none d-lg-inline-none site-menu float-right site-nav-wrap"
-          >
-            <li><a href="#home-section" class="nav-link active">💒 Home</a></li>
-            <li>
-              <a href="#portfolio-section" class="nav-link">🔨 Recent Works</a>
-            </li>
-            <li class="has-children">
-              <a href="#about-section" class="nav-link">🚬 About</a>
-            </li>
-            <li>
-              <a href="#services-section" class="nav-link">💥 What I Do</a>
-            </li>
-
-            <li><a href="#contact-section" class="nav-link">🚀 Reach Me</a></li>
-          </ul>
-
-          <a
-            href="#"
-            class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-inline-block"
-            data-toggle="collapse"
-            data-target="#main-navbar"
-          >
-            <span></span>
-          </a>
+         
         </div>
       </div>
     </nav>
@@ -108,7 +84,7 @@
           <div class="col-md-7">
             <h1 class="heading gsap-reveal-hero mb-3">
               <strong
-                >They<span class="text-primary"> Call me</span> Pandey</strong
+                >They<span class="text-primary"> <a href="Extras/card.html">Call me</a></span> Pandey</strong
               >
             </h1>
             <h2 class="subheading gsap-reveal-hero mb-4">
