--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <!-- Main Content -->
         <div class="text-center mb-20 mt-20">
           <h1 class="text-6xl md:text-8xl font-bold mb-8">
-            They <span class="gradient-text">Call me</span> Pandey
+            They <span class="gradient-text">Call me</span> Spark
           </h1>
           <p id="blinking-text" class="text-xl text-gray-400 max-w-2xl mx-auto">
             Welcome to my digital playground! Get ready for a rollercoaster ride
@@ -430,10 +430,10 @@
             <div class="absolute inset-0 flex items-center justify-center">
               <div class="relative w-72 h-72">
                 <div
-                  class="absolute inset-0 bg-gradient-to-tr rounded-full"
+                  class="absolute "
                 ></div>
                 <img
-                  src="Profile/Profile.png"
+                  src="Profile/ProfileWIthBg.jpg"
                   alt="Profile"
                   class="w-full h-full object-cover rounded-full p-1 bg-gray-900/80"
                 />
