--- a/index.html
+++ b/index.html
@@ -1951,8 +1951,11 @@
             <!-- Playlist Side -->
             <div class="p-6">
               <div class="flex items-center justify-between mb-6">
-                <h3 class="font-bold text-lg">Your Playlist</h3>
-                <span class="text-sm text-gray-400">${songs.length} tracks</span>
+                <h3 class="font-bold text-lg text-blue-700">Code Jams</h3>
+                <h3 class="font-bold text-lg text-blue-700">Code Jams</h3>
+                <span class="text-sm">
+                  <span class="text-teal-500">${songs.length}</span> <span class="text-yellow-500">tracks</span>
+                </span>
               </div>
     
               <div class="space-y-1 max-h-[500px] overflow-y-auto pr-4" id="playlist">
