--- a/index.html
+++ b/index.html
@@ -1933,7 +1933,7 @@
         <span class="w-1.5 h-1.5 rounded-full bg-gray-500 mt-2"></span>
         <span class="flex items-center gap-2">
           <i class="ri-global-line text-purple-500"></i>
-          Remote Work
+          <a href="app.json" target="_blank" >Remote Work</a>
         </span>
       </div>
 
