--- a/Extras/card.html
+++ b/Extras/card.html
@@ -3,6 +3,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="shortcut icon" href="/images/naughty.png" />
+    <title>Om Pandey</title>
   <style>
     .card-3d {
       transform-style: preserve-3d;
