--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <!-- Center Image -->
               <div class="absolute inset-0 flex items-center justify-center">
                 <div class="relative w-72 h-72">
-                  <img src="Profile/MainOne.jpg" alt="Profile" class="w-full h-full object-cover rounded-full p-1 bg-gray-900/80" />
+                  <img src="Profile/MainOne.gif" alt="Profile" class="w-full h-full object-cover rounded-full p-1 bg-gray-900/80" />
                 </div>
               </div>
             </div>
